use Set.of (#1198)
* use Set.of

* Update StressTestUtils.java

* Revert "Update StressTestUtils.java"

This reverts commit 2b702e606f642e0e04f5c9be8a5801cd41681c7f.

* Update AbstractFileHandler.java